--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,61 @@
+
+// Include theming for Angular Material with `mat.theme()`.
+// This Sass mixin will define CSS variables that are used for styling Angular Material
+// components according to the Material 3 design spec.
+// Learn more about theming and how to use it for your application's
+// custom components at https://material.angular.dev/guide/theming
+@use '@angular/material' as mat;
+
+// :root {
+//   // سفارشی‌سازی رنگ‌ها برای mat-form-field نوع outline
+//   @include mat.form-field-overrides((
+   
+//     outlined-label-text-color: #555, // رنگ متن لیبل
+//     outlined-input-text-color: #222, // رنگ متن ورودی
+//     outlined-input-text-placeholder-color: #999, // رنگ placeholder
+//     outlined-container-shape: 12px
+//   ));
+// }
+
+
+@font-face {
+  font-family: Persian ;
+  src : url('/fontes/persian.woff2')
+}
+ 
+html {
+  @include mat.theme((
+    color: (
+      primary: mat.$azure-palette,
+      tertiary: mat.$blue-palette,
+    ),
+    typography: Persian,
+    density: 0,
+  ));
+}
+
+
+
+body {
+  // Default the application to a light color theme. This can be changed to
+  // `dark` to enable the dark color theme, or to `light dark` to defer to the
+  // user's system settings.
+  color-scheme: light;
+
+  // Set a default background, font and text colors for the application using
+  // Angular Material's system-level CSS variables. Learn more about these
+  // variables at https://material.angular.dev/guide/system-variables
+  background-color: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
+  font: var(--mat-sys-body-medium);
+
+  // Reset the user agent margin.
+  margin: 0;
+}
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Persian, "Helvetica Neue", sans-serif; }
+
+
+// Customize the entire app. Change :root to your selector if you want to scope the styles.
