--- a/src/app/+pages/public/login-page/login-page.html
+++ b/src/app/+pages/public/login-page/login-page.html
@@ -4,11 +4,11 @@
     <img mat-card-image src="/images/LibraryLogoBgLess.png" class="logo-img" >
     </div>
 <mat-card-header class="header-center">
-  <mat-card-title class="title-bold">خوش آمدید.</mat-card-title>
+  <mat-card-title class="title-bold">خوش آمدید</mat-card-title>
   <!-- <mat-card-subtitle class="subtitle-bold">برای ورود به سامانه نام کاربری و رمز عبور خود را وارد کنید.</mat-card-subtitle> -->
 </mat-card-header>
     <!-- <img mat-card-image src="/images/NeonLibraryImage2.jpg" alt="Photo of a Shiba Inu"> -->
-    <mat-card-content>
+    <mat-card-content>  
       <!-- <div class="input-group">
       <p>
         <mat-form-field class="full-width-top" appearance="fill">
