--- a/src/app/+components/book/book.html
+++ b/src/app/+components/book/book.html
@@ -1,7 +1,12 @@
+
+<section>
+  <button (click)="openDialog()" matButton="filled">افزودن</button>
+</section>
 <app-grid
-  [data]="books"
-  [columns]="['title', 'author', 'year', 'isAvailable', 'borrower']"
+  [signalData]="signalBooks()"
+  [signalColumns]="['title', 'author', 'year', 'isAvailable', 'borrower']"
   (onEdit)="editBook($event)"
   (onRemove)="deleteBook($event)">
 </app-grid>
 
+  
