--- a/src/app/+components/grid/grid.html
+++ b/src/app/+components/grid/grid.html
@@ -22,9 +22,9 @@
   </div>
 }
 
-<table mat-table [dataSource]="data" class="mat-elevation-z8 grid-table" multiTemplateDataRows>
+<table mat-table [dataSource]="signalData()" class="mat-elevation-z8 grid-table" multiTemplateDataRows>
 
-  @for (col of columns; track col) {
+  @for (col of signalColumns(); track col) {
     <ng-container [matColumnDef]="col">
       <th mat-header-cell *matHeaderCellDef> {{ col | titlecase }} </th>
       <td mat-cell *matCellDef="let row"> {{ row[col] }} </td>
